Сделано первое дз

--- a/index.html
+++ b/index.html
@@ -10,182 +10,248 @@
 </head>
 
 <body>
-	<!-- <div class="container">
-		<header class="page-header">
+	<header class="page-header">
+		<div class="container">
 			<div class="page-header-wrp">
-				<h1 class="page-header-title">Product name</h1>
-				<ul class="page-header-list">
-					<li class="page-header-list-item">Put on this page information about your product</li>
-					<li class="page-header-list-item">A detailed description of your product</li>
-					<li class="page-header-list-item">Tell us about the advantages and merits</li>
-					<li class="page-header-list-item">Associate the page with the payment system</li>
+				<h1 class="heading_1">Product name</h1>
+				<ul class="page-header-wrp-list">
+					<li class="page-header-wrp-list-item">Put on this page information about your product</li>
+					<li class="page-header-wrp-list-item">A detailed description of your product</li>
+					<li class="page-header-wrp-list-item">Tell us about the advantages and merits</li>
+					<li class="page-header-wrp-list-item">Associate the page with the payment system</li>
 				</ul>
 			</div>
-			<img class="page-header-pic" src="#" alt="фото товара" height="214">
-		</header>
-		<main>
-			<article class="page-content-article-about_your_product">
-				<div class="page-content-article-about_your_product-wrp">
-					<h2 class="page-content-article-about_your_product-title heading-2">About your product</h2>
-					<section class="page-content-article-about_your_product-section">
-						<p class="page-content-article-about_your_product-section-text text">Lorem ipsum dolor sit
-							amet,
-							consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus
-							eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam
-							sapiente
-							ut ipsum.
-						</p>
-					</section>
-					<section class="page-content-article-about_your_product-section">
-						<p class="page-content-article-about_your_product-section-text text">Pariatur iure ab sunt
-							nesciunt,
-							quibusdam odio iste cumque itaque, ipsa vel exercitationem
-							ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde
-							perferendis nemo debitis dolor.</p>
-					</section>
+			<img src="#" alt="photo" class="page-header-img">
+		</div>
+	</header>
+	<main>
+		<section class="page-content-About_your_product container">
+			<div class="page-content-about_your_product-wrp">
+				<h2 class="heading_2">About your product</h2>
+				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at.
+					Natus eos,
+					eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
+				<p class="text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel
+					exercitationem ullam quos
+					aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis
+					dolor.</p>
+			</div>
+			<video src="#" class="page-content-about_your_product-video"></video>
+		</section>
+		<section class="page-content-Dignity_and_pluses_product container">
+			<h2 class="heading_2">Dignity and pluses product</h2>
+			<details>
+				<summary>
+					Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam.
+					Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore
+					minus inventore.
+				</summary>
+			</details>
+			<details>
+				<summary>
+					Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam.
+					Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore
+					minus inventore.
+				</summary>
+			</details>
+			<details>
+				<summary>
+					Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam.
+					Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore
+					minus inventore.
+				</summary>
+			</details>
+			<details>
+				<summary>
+					Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam.
+					Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore
+					minus inventore.
+				</summary>
+			</details>
+			<details>
+				<summary>
+					Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam.
+					Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore
+					minus inventore.
+				</summary>
+			</details>
+			<details>
+				<summary>
+					Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam.
+					Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore
+					minus inventore.
+				</summary>
+			</details>
+		</section>
+		<section class="page-content-Screenshots container">
+			<h2 class="heading_2">Screenshots</h2>
+			<figure>
+				<img src="#" alt="photo" class="page-content-Screenshots-img">
+				<figcaption>
+					<h3 class="heading_3">The description for the image</h3>
+					<p class="text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel
+						exercitationem ullam
+						quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo
+						debitis dolor.</p>
+				</figcaption>
+			</figure>
+			<figure>
+				<img src="#" alt="photo" class="page-content-Screenshots-img">
+				<figcaption>
+					<h3 class="heading_3">The description for the image</h3>
+					<p class="text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel
+						exercitationem ullam
+						quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo
+						debitis dolor.</p>
+				</figcaption>
+			</figure>
+			<figure>
+				<img src="#" alt="photo" class="page-content-Screenshots-img">
+				<figcaption>
+					<h3 class="heading_3">The description for the image</h3>
+					<p class="text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel
+						exercitationem ullam
+						quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo
+						debitis dolor.</p>
+				</figcaption>
+			</figure>
+			<figure>
+				<img src="#" alt="photo" class="page-content-Screenshots-img">
+				<figcaption>
+					<h3 class="heading_3">The description for the image</h3>
+					<p class="text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel
+						exercitationem ullam
+						quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo
+						debitis dolor.</p>
+				</figcaption>
+			</figure>
+		</section>
+		<section class="page-content-Reviews container">
+			<h2 class="heading_2">Reviews</h2>
+			<div class="page-content-Reviews-review">
+				<img src="#" alt="photo" class="page-content-Reviews-review">
+				<div class="page-content-Reviews-review-wrp">
+					<p class="comment">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio,
+						iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus
+						officiis sapiente necessitatibus commodi consectetur?</p>
+					<p class="cite">Lourens S.</p>
 				</div>
-				<img class="page-content-article-img" src="#" alt="фото товара" height="245">
-			</article>
-			<section class="page-content-section-dignity_and_pluses">
-				<h2 class="page-content-section-dignity_and_pluses-title heading-2">Dignity and pluses product</h2>
-				<div class="page-content-section-dignity_and_pluses-desc-left-right">
-					<div class="page-content-section-dignity_and_pluses-desc-right">
-						<details class="page-content-section-dignity_and_pluses-details">
-							<summary>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit
-								iure
-								placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas,
-								maxime,
-								quaerat
-								porro totam, dolore minus inventore.</summary>
-							Something small enough to escape casual notice.
-						</details>
-						<details class="page-content-section-dignity_and_pluses-details">
-							<summary>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit
-								iure
-								placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas,
-								maxime, quaerat
-								porro totam, dolore minus inventore.</summary>
-							Something small enough to escape casual notice.
-						</details>
-						<details class="page-content-section-dignity_and_pluses-details">
-							<summary>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit
-								iure
-								placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas,
-								maxime,
-								quaerat
-								porro totam, dolore minus inventore.</summary>
-							Something small enough to escape casual notice.
-						</details>
-					</div>
-					<div class="page-content-section-dignity_and_pluses-desc-left">
-						<details class="page-content-section-dignity_and_pluses-details">
-							<summary>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit
-								iure
-								placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas,
-								maxime,
-								quaerat
-								porro totam, dolore minus inventore.</summary>
-							Something small enough to escape casual notice.
-						</details>
-						<details class="page-content-section-dignity_and_pluses-details">
-							<summary>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit
-								iure
-								placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas,
-								maxime,
-								quaerat
-								porro totam, dolore minus inventore.</summary>
-							Something small enough to escape casual notice.
-						</details>
-						<details class="page-content-section-dignity_and_pluses-details">
-							<summary>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit
-								iure
-								placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas,
-								maxime,
-								quaerat
-								porro totam, dolore minus inventore.</summary>
-							Something small enough to escape casual notice.
-						</details>
-					</div>
+			</div>
+			<div class="page-content-Reviews-review">
+				<img src="#" alt="photo" class="page-content-Reviews-review">
+				<div class="page-content-Reviews-review-wrp">
+					<p class="comment">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio,
+						iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus
+						officiis sapiente necessitatibus commodi consectetur?</p>
+					<p class="cite">Lourens S.</p>
 				</div>
-			</section>
-			<section class="page-content-section-screenshots">
-				<h2 class="page-content-section-screenshots-title heading-2">Screenshots</h2>
-				<div class="page-content-section-screenshots-figure-right-left">
-					<div class="page-content-section-screenshots-figure-right">
-						<figure class="page-content-section-screenshots-figure">
-							<p class="page-content-section-screenshots-figure-p-img"><img
-									class="page-content-section-screenshots-figure-img" src="#" alt="screnshoot"
-									height="150"></p>
-							<figcaption class="right">
-								<h3 class="page-content-section-screenshots-figure-title">The description for the
-									image
-								</h3>
-								<p class="page-content-section-screenshots-figure-text text">Pariatur iure ab sunt
-									nesciunt,
-									quibusdam odio iste cumque itaque, ipsa vel exercitationem
-									ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque,
-									unde
-									perferendis nemo debitis dolor.</p>
-							</figcaption>
-						</figure>
-						<figure class="page-content-section-screenshots-figure">
-							<p class="page-content-section-screenshots-figure-p-img"><img
-									class="page-content-section-screenshots-figure-img" src="#" alt="screnshoot"
-									height="150"></p>
-							<figcaption class="right">
-								<h3 class="page-content-section-screenshots-figure-title">The description for the
-									image
-								</h3>
-								<p class="page-content-section-screenshots-figure-text text">Pariatur iure ab sunt
-									nesciunt,
-									quibusdam odio iste cumque itaque, ipsa vel exercitationem
-									ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque,
-									unde
-									perferendis nemo debitis dolor.</p>
-							</figcaption>
-						</figure>
-					</div>
-					<div class="page-content-section-screenshots-figure-left">
-						<figure class="page-content-section-screenshots-figure">
-							<p class="page-content-section-screenshots-figure-p-img"><img
-									class="page-content-section-screenshots-figure-img" src="#" alt="screnshoot"
-									height="150"></p>
-							<figcaption class="right">
-								<h3 class="page-content-section-screenshots-figure-title">The description for the
-									image
-								</h3>
-								<p class="page-content-section-screenshots-figure-text text">Pariatur iure ab sunt
-									nesciunt,
-									quibusdam odio iste cumque itaque, ipsa vel exercitationem
-									ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque,
-									unde
-									perferendis nemo debitis dolor.</p>
-							</figcaption>
-						</figure>
-						<figure class="page-content-section-screenshots-figure">
-							<p class="page-content-section-screenshots-figure-p-img"><img
-									class="page-content-section-screenshots-figure-img" src="#" alt="screnshoot"
-									height="150"></p>
-							<figcaption class="right">
-								<h3 class="page-content-section-screenshots-figure-title">The description for the
-									image
-								</h3>
-								<p class="page-content-section-screenshots-figure-text text">Pariatur iure ab sunt
-									nesciunt,
-									quibusdam odio iste cumque itaque, ipsa vel exercitationem
-									ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque,
-									unde
-									perferendis nemo debitis dolor.</p>
-							</figcaption>
-						</figure>
-					</div>
+			</div>
+			<div class="page-content-Reviews-review">
+				<img src="#" alt="photo" class="page-content-Reviews-review">
+				<div class="page-content-Reviews-review-wrp">
+					<p class="comment">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio,
+						iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus
+						officiis sapiente necessitatibus commodi consectetur?</p>
+					<p class="cite">Lourens S.</p>
 				</div>
-			</section>
-		</main>
-		<footer>
-		</footer>
-	</div> -->
+			</div>
+			<div class="page-content-Reviews-review">
+				<img src="#" alt="photo" class="page-content-Reviews-review">
+				<div class="page-content-Reviews-review-wrp">
+					<p class="comment">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio,
+						iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus
+						officiis sapiente necessitatibus commodi consectetur?</p>
+					<p class="cite">Lourens S.</p>
+				</div>
+			</div>
+		</section>
+		<section class="page-content-Buy_it_now">
+			<h2 class="heading_2">Buy it now</h2>
+			<div class="page-content-Buy_it_now-card-box">
+				<div class="page-content-Buy_it_now-card-box-card_1">
+					<h3 class="heading-card-box">Standart</h3>
+					<div class="page-content-Buy_it_now-card-box-card-wrp">
+						<p class="page-content-Buy_it_now-card-box-card-wrp-price">$100</p>
+					</div>
+					<ol class="page-content-Buy_it_now-card-box-card-list">
+						<li>Porro officia cumque sint deleniti;</li>
+						<li>Тemo facere rem vitae odit;</li>
+						<li>Cum odio, iste quia doloribus autem;</li>
+						<li>Aperiam nulla ea neque.</li>
+					</ol>
+					<a href="#" class="page-content-Buy_it_now-card-box-card-link">BUY</a>
+				</div>
+				<div class="page-content-Buy_it_now-card-box-card_2">
+					<h3 class="heading-card-box">Premium</h3>
+					<div class="page-content-Buy_it_now-card-box-card-wrp">
+						<p class="page-content-Buy_it_now-card-box-card-wrp-price">$150</p>
+					</div>
+					<ol class="page-content-Buy_it_now-card-box-card-list">
+						<li>Porro officia cumque sint deleniti;</li>
+						<li>Тemo facere rem vitae odit;</li>
+						<li>Cum odio, iste quia doloribus autem;</li>
+						<li>Aperiam nulla ea neque.</li>
+						<li>Porro officia cumque sint deleniti;</li>
+						<li>Тemo facere rem vitae odit;</li>
+						<li>Cum odio, iste quia doloribus autem;</li>
+						<li>Aperiam nulla ea neque.</li>
+					</ol>
+					<a href="#" class="page-content-Buy_it_now-card-box-card-link">BUY</a>
+				</div>
+				<div class="page-content-Buy_it_now-card-box-card_3">
+					<h3 class="heading-card-box">Lux</h3>
+					<div class="page-content-Buy_it_now-card-box-card-wrp">
+						<p class="page-content-Buy_it_now-card-box-card-wrp-price">$200</p>
+					</div>
+					<ol class="page-content-Buy_it_now-card-box-card-list">
+						<li>Porro officia cumque sint deleniti;</li>
+						<li>Тemo facere rem vitae odit;</li>
+						<li>Cum odio, iste quia doloribus autem;</li>
+						<li>Aperiam nulla ea neque.</li>
+						<li>Porro officia cumque sint deleniti;</li>
+						<li>Тemo facere rem vitae odit;</li>
+						<li>Cum odio, iste quia doloribus autem;</li>
+						<li>Aperiam nulla ea neque.</li>
+						<li>Porro officia cumque sint deleniti;</li>
+						<li>Тemo facere rem vitae odit;</li>
+						<li>Cum odio, iste quia doloribus autem;</li>
+						<li>Aperiam nulla ea neque.</li>
+					</ol>
+					<a href="#" class="page-content-Buy_it_now-card-box-card-link">BUY</a>
+				</div>
+			</div>
+		</section>
+	</main>
+	<footer class="page-footer">
+		<div class="page-footer-top">
+			<div class="page-footer-top-wrp">
+				<h2 class="page-footer-top-heading"></h2>
+				<form action="#" class="page-footer-top-form">
+					<p><input type="text" placeholder="Your name:"></p>
+					<p><input type="email" placeholder="Your email:"></p>
+					<p><textarea name="text" cols="30" rows="10" placeholder="Your massage:"></textarea></p>
+					<p><button class="page-footer-top-form-button">SEND</button></p>
+				</form>
+				<div class="page-footer-top-wrp">
+					<ul class="page-footer-top-wrp-list">
+						<li class="page-footer-top-wrp-list-item_1"><a href="#">here_your_login_skype</a></li>
+						<li class="page-footer-top-wrp-list-item_2"><a href="#">279679659</a></li>
+						<li class="page-footer-top-wrp-list-item_3"><a href="#">psdhtmlcss@mail.ru</a></li>
+						<li class="page-footer-top-wrp-list-item_4"><a href="#">80 00 4568 55 55</a></li>
+					</ul>
+				</div>
+				<ul class="page-footer-top-list">
+					<li class="page-footer-top-list-item_1"><a href="#"></a></li>
+					<li class="page-footer-top-list-item_2"><a href="#"></a></li>
+					<li class="page-footer-top-list-item_3"><a href="#"></a></li>
+					<li class="page-footer-top-list-item_4"><a href="#"></a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="page-footer-bottom">
+			<p class="page-footer-bottom-text">Copyright © 2014 Product name · PSD HTML CSS</p>
+		</div>
+	</footer>
 </body>
 
 </html>
-1
