--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 	<footer class="footer">
 		<div class="footer__top">
 			<div class="footer__wrp">
-				<h2 class="footer__title"></h2>
+				<h2 class="footer__title">Contacts</h2>
 				<form action="#" class="footer__form">
 					<p><input type="text" placeholder="Your name:" class="footer__input"></p>
 					<p><input type="email" placeholder="Your email:" class="footer__input"></p>
