Закончена работа над проектом

--- a/index.html
+++ b/index.html
@@ -62,10 +62,17 @@
 					debitis
 					dolor.</p>
 			</div>
-			<!-- <video src="#" class="about__video"></video> -->
-			<!-- пока что вставлю картинку, потому что с видео еще не работали -->
-			<img src="https://lh3.googleusercontent.com/proxy/8QOprAA1gQy8BJgXYFlZqCfS9y2yVbzkmp2KYNSJTbQjlxwi1HYPS1r3WUlw4XrL4J92I4QEaj0"
-				alt="photo" class="about__img">
+			<video preload="metadata" loop="true" muted="muted" width="430" height="245" controls="controls"
+				poster="https://theglitchy.com/tools/html-colors/hex/4f5e70/color-image.svg">
+				<source src="https://webref.ru/example/video/duel.ogv"
+					type="video/ogg; codecs=&quot;theora, vorbis&quot;">
+				<source src="https://webref.ru/example/video/duel.ogv"
+					type="video/mp4; codecs=&quot;avc1.42E01E, mp4a.40.2&quot;">
+				<source src="https://webref.ru/example/video/duel.ogv"
+					type="video/webm; codecs=&quot;vp8, vorbis&quot;">
+				Элемент video не поддерживается вашим браузером.
+				<a href="video/duel.mp4">Скачайте видео</a>.
+			</video>
 		</section>
 		<section class="dignity">
 			<div class="container">
@@ -294,7 +301,7 @@
 		</section>
 	</main>
 	<footer class="footer">
-		<div class="footer__top">
+		<div class="footer__contacts">
 			<div class="footer__container">
 				<h2 class="footer__title">Contacts</h2>
 				<div class="footer__columns">
@@ -330,7 +337,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="footer__bottom">
+		<div class="footer__copyright">
 			<p class="footer__paragraph">Copyright © 2014 Product name · PSD HTML CSS</p>
 		</div>
 	</footer>
